--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -1,6 +1,27 @@
 /* typical break points are
 768px, 992px, 1200px */
-/* _______________________________________ */
+
+/* colors used in the css
+#F0F8FF; #1E90FF; #ADD8E6; #84888c; #545759; #00ffff; #8a2be2; #ffffff; #ff0000; 
+*/
+
+/* When a new class or id added, add the path in comment */
+
+
+/* applies upto the limit  */
+/* max-width have to be ordered from largest to smallest to work properly */
+/* __________________________________________________________________________________________________ */
+@media screen and (max-width: 1080px) {
+    .forNameSection label, .forNameSection input,
+    .forEmailSection label, .forEmailSection input,
+    .forMessageSection label, .forMessageSection textarea{
+        display: block;
+        width: 100%;
+    }
+}
+
+
+
 @media screen and (max-width: 768px) {
     /* header > navSection > navbarBrand */
     .navbarBrand{
@@ -17,7 +38,7 @@
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
-        background-color: blueviolet;
+        background-color: #8a2be2;
     }
     
     /* header > navSection > navMap > navList > navItems */
@@ -45,7 +66,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background-color: #fff;
+        background-color: #ffffff;
         width: 30px;
         height: 4px;
         border-radius: 10px;
@@ -64,7 +85,7 @@
         width: 50px;
         top: 47.5%;
         left: 9%;
-        background-color: red;
+        background-color: #ff0000;
     }
     .cross .line2{
         left: 500%;
@@ -74,12 +95,21 @@
         width: 50px;
         top: 47.5%;
         left: 9%;
-        background-color: red;
+        background-color: #ff0000;
     }
 }
 
 
-/* ______________________________ */
+@media screen and (max-width: 650px) {
+    .textSection{
+        flex-direction: column;
+    }
+}
+
+
+/* applies exceeding the limits */
+/* min-width have to be ordered from smallest to largest to work properly */
+/* __________________________________________________________________________________________________ */
 @media screen and (min-width: 768px) {
     /* header > navSection > navMap */
     .navMap{
@@ -97,16 +127,28 @@
         right: 150%;
     }
     .contact{
-        background-color: blueviolet;
+        background-color: #8a2be2;
         padding: 6px 18px;
         border-radius: 20px;
-        color: white;
+        color: #ffffff;
     }
 
     /* header > navSection > hamburger */
     .hamburger{
         display: none;
     }
+
+    .reviewSection{
+        padding-right: 30px;
+    }
+    .resumeSection{
+        padding-left: 30px;
+    }
+    .textSection{
+        flex-direction: column;
+    }
+
+
 
 }
 
@@ -121,3 +163,19 @@
         right: 310%;
     }
 }
+
+
+@media screen and (min-width: 1280px) {
+    .textSection{
+        flex-direction: row;
+    }
+}
+
+
+/* _________________________________________________________________________________________________ */
+/* ekhaner style experiment korar jonne use korchi */
+
+
+
+
+
