--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* colors used in the css
-#F0F8FF; #1E90FF; #ADD8E6;
+#F0F8FF; #1E90FF; #ADD8E6; #84888c; #545759; #00ffff; #8a2be2; #ffffff; #ff0000; #004cff; #4267B2; #fed373; #f15245; #d92e7f; #9b36b7; #515ecf; #1DA1F2; #25D366; #0077b5; #333333
 */
 
-
+/* When a new class or id added, add the path in comment */
 
 
 body{
@@ -75,7 +75,7 @@ body{
 .footer{
     background-color: #1E90FF;
     color: #F0F8FF;
-    padding: 5% 5% 10%;
+    padding: 5% 5% 5%;
 }
 
 /* footer > reviewSection */
@@ -83,6 +83,7 @@ body{
     background-color: #1E90FF;
     color: #F0F8FF;
     font-family: 'Bree Serif', serif;
+    margin: 40px auto;
 }
 
 /* footer > reviewSection > form > forNameSection */
@@ -108,7 +109,6 @@ body{
 .forEmailSection input::placeholder,
 .forMessageSection textarea::placeholder{
     color: #545759;
-
 }
 
 .forNameSection input:focus,
@@ -120,7 +120,7 @@ body{
 
 /* footer > reviewSection > form > submit */
 .submitButton{
-    background-color: aqua;
+    background-color: #00ffff;
     margin-left: auto;
     margin-top: 12px;
     display: block;
@@ -129,3 +129,113 @@ body{
     border-radius: 60px;
     font-size: 24px;
 }
+
+/* footer > resumeSection */
+.resumeSection{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px auto;
+}
+
+/* footer > resumeSection > textSection */
+.textSection{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 32px;
+    text-align: center;
+    font-family: 'Rajdhani', sans-serif;
+    margin: 0 0 60px;
+    font-weight: 1000;
+}
+
+/* footer > resumeSection > resumeButton */
+.resumeButton button{
+    border: none;
+    border-radius: 50px;
+    padding: 8px 18px;
+    font-family: 'Rajdhani', sans-serif;
+    font-weight: 900;
+}
+
+/* footer > resumeSection > connectionSection */
+.connectionSection{
+    margin: 50px 0 0;
+    width: 100%;
+}
+
+/* footer > resumeSection > connectionSection > row > col */
+.facebook, .twitter, .instagram, .linkedin, .whatsapp, .github{
+    justify-content: space-around;
+    display: flex;
+}
+
+/* footer > resumeSection > connectionSection > row > col > social */
+.social{
+    width: 60px;
+    height: 60px;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: all 0.3s linear;
+}
+
+.social:hover{
+    background-color: #F0F8FF;
+}
+
+/* footer > resumeSection > connectionSection > row > col > social > i */
+.social i{
+    font-size: 40px;
+    color: #F0F8FF;
+    transition: all 0.3s linear;
+}
+
+.social:hover > i{
+    font-size: 45px;
+}
+.facebook .social:hover > i{
+    color: #4267B2;
+}
+.twitter .social:hover > i{
+    color: #1DA1F2;
+}
+.instagram .social:hover > i{
+    background: radial-gradient(circle at 33% 100%, #fed373 4%, #f15245 30%, #d92e7f 62%, #9b36b7 85%, #515ecf);
+    background-clip:text;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.linkedin .social:hover > i{
+    color: #0077b5;
+}
+.whatsapp .social:hover > i{
+    color: #25D366;
+}
+.github .social:hover > i{
+    color: #333333;
+}
+
+
+/* _________________________________________________________________________________________________ */
+/* ekhane experiment er jonne korchi */
+
+/* footer > copyright */
+.copyright{
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
