--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@ body{
 }
 
 .header{
-    padding: 0 5% ;
+    padding: 0 5% 20%;
     background-image: url(../image/bf_for_portfolio.png);
+    mask-image: linear-gradient(to top, transparent 9%, #232323 20%);
     background-repeat: no-repeat;
     background-position: center;
-    /* background-color: #ADD8E6; */
 }
 
 /* header > navSection */
@@ -61,7 +61,7 @@ body{
 .navLinks{
     text-decoration: none;
     color: #F0F8FF;
-    padding: 0 10px;
+    padding: 0 10px 20px;
 }
 
 .dropdownButton{
@@ -108,7 +108,6 @@ body{
 
 
 .footer{
-    /* background-color: #1E90FF; */
     color: #F0F8FF;
     padding: 5% 5% 5%;
 }
@@ -308,6 +307,14 @@ body{
     display: none;
 }
 
+.about:hover .dropdownList, .work:hover .dropdownList, .galary:hover .dropdownList{
+    display: block;
+}
+
+.hide{
+    display: none;
+}
+
 .dropdownList ul {
     margin: 0;
     padding: 0 0 0 20px;
@@ -325,3 +332,32 @@ body{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.experiment{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.experimentImg{
+    width: 40vw;
+    transform: skew(20deg,-11deg) rotate(3deg);
+    box-shadow: 30px 30px 25px black;
+}
